<resources>
    <string name="app_name">Ftest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="temp">Temperature :</string>
    <string name="blank"></string>
    <string name="hum">Humidity :</string>
    <string name="sel_device">Select Device</string>
    <string name="disconnect">Disconnect</string>
</resources>
